# st-vortree

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
st_vortree/: __init__.py  pyproject.toml
st_vortree/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
st_vortree/frontend/src/: VoronoiComponent.tsx  index.css  index.tsx  voronoi.js
